// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> closes <LinkList> on click 1`] = `
.c1 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  width: 205px;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12);
}

.list-container--open .c1 {
  display: block;
}

.c1.links__list--open {
  display: block;
}

.c2 {
  padding: 8px;
}

.c2.wrapper--has-after {
  padding: 8px 8px 0 8px;
}

.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
  position: relative;
}

.links__list .c0 {
  width: 100%;
  text-align: left;
}

.c0:focus,
.c0:hover {
  outline: 0;
}

.c0.link--has-other.link--open:after {
  content: "";
  display: inline-block;
  border-bottom: 4px solid #026cdf;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

<span
  class="list-container list-container--closed"
  role="none"
>
  <a
    aria-expanded="false"
    aria-haspopup="true"
    class="c0 link link--has-other"
    href="/"
    role="link"
    target="_self"
  >
    Content
  </a>
   
  <div
    class="c1 links links__list"
  >
    <div
      class="c2"
    >
      <span
        class="list-container list-container--closed"
        role="none"
      >
        <a
          class="c0 link"
          href="/page/"
          role="link"
          target="_self"
        >
          Sub Content
        </a>
      </span>
    </div>
  </div>
</span>
`;

exports[`<Link> closes <LinkList> on mouse leave 1`] = `
.c1 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  width: 205px;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12);
}

.list-container--open .c1 {
  display: block;
}

.c1.links__list--open {
  display: block;
}

.c2 {
  padding: 8px;
}

.c2.wrapper--has-after {
  padding: 8px 8px 0 8px;
}

.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
  position: relative;
}

.links__list .c0 {
  width: 100%;
  text-align: left;
}

.c0:focus,
.c0:hover {
  outline: 0;
}

.c0.link--has-other.link--open:after {
  content: "";
  display: inline-block;
  border-bottom: 4px solid #026cdf;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

<span
  class="list-container list-container--closed"
  role="none"
>
  <a
    aria-expanded="false"
    aria-haspopup="true"
    class="c0 link link--has-other"
    href="/"
    role="link"
    target="_self"
  >
    Content
  </a>
   
  <div
    class="c1 links links__list"
  >
    <div
      class="c2"
    >
      <span
        class="list-container list-container--closed"
        role="none"
      >
        <a
          class="c0 link"
          href="/page/"
          role="link"
          target="_self"
        >
          Sub Content
        </a>
      </span>
    </div>
  </div>
</span>
`;

exports[`<Link> does not close when link has no content 1`] = `
.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
  position: relative;
}

.links__list .c0 {
  width: 100%;
  text-align: left;
}

.c0:focus,
.c0:hover {
  outline: 0;
}

.c0.link--has-other.link--open:after {
  content: "";
  display: inline-block;
  border-bottom: 4px solid #026cdf;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

<span
  class="list-container list-container--closed"
  role="none"
>
  <a
    class="c0 link"
    href="/"
    role="link"
    target="_self"
  >
    Content
  </a>
</span>
`;

exports[`<Link> does not open when link has no content 1`] = `
.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
  position: relative;
}

.links__list .c0 {
  width: 100%;
  text-align: left;
}

.c0:focus,
.c0:hover {
  outline: 0;
}

.c0.link--has-other.link--open:after {
  content: "";
  display: inline-block;
  border-bottom: 4px solid #026cdf;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

<span
  class="list-container list-container--closed"
  role="none"
>
  <a
    class="c0 link"
    href="/"
    role="link"
    target="_self"
  >
    Content
  </a>
</span>
`;

exports[`<Link> opens <LinkList> on click 1`] = `
.c1 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  width: 205px;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12);
}

.list-container--open .c1 {
  display: block;
}

.c1.links__list--open {
  display: block;
}

.c2 {
  padding: 8px;
}

.c2.wrapper--has-after {
  padding: 8px 8px 0 8px;
}

.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
  position: relative;
}

.links__list .c0 {
  width: 100%;
  text-align: left;
}

.c0:focus,
.c0:hover {
  outline: 0;
}

.c0.link--has-other.link--open:after {
  content: "";
  display: inline-block;
  border-bottom: 4px solid #026cdf;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

<span
  class="list-container list-container--open"
  role="none"
>
  <a
    aria-expanded="true"
    aria-haspopup="true"
    class="c0 link link--has-other link--open"
    href="/"
    role="link"
    target="_self"
  >
    Content
  </a>
   
  <div
    class="c1 links links__list"
  >
    <div
      class="c2"
    >
      <span
        class="list-container list-container--closed"
        role="none"
      >
        <a
          class="c0 link"
          href="/page/"
          role="link"
          target="_self"
        >
          Sub Content
        </a>
      </span>
    </div>
  </div>
</span>
`;

exports[`<Link> opens <LinkList> on mouse enter 1`] = `
.c1 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  width: 205px;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12);
}

.list-container--open .c1 {
  display: block;
}

.c1.links__list--open {
  display: block;
}

.c2 {
  padding: 8px;
}

.c2.wrapper--has-after {
  padding: 8px 8px 0 8px;
}

.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
  position: relative;
}

.links__list .c0 {
  width: 100%;
  text-align: left;
}

.c0:focus,
.c0:hover {
  outline: 0;
}

.c0.link--has-other.link--open:after {
  content: "";
  display: inline-block;
  border-bottom: 4px solid #026cdf;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

<span
  class="list-container list-container--open"
  role="none"
>
  <a
    aria-expanded="true"
    aria-haspopup="true"
    class="c0 link link--has-other link--open"
    href="/"
    role="link"
    target="_self"
  >
    Content
  </a>
   
  <div
    class="c1 links links__list"
  >
    <div
      class="c2"
    >
      <span
        class="list-container list-container--closed"
        role="none"
      >
        <a
          class="c0 link"
          href="/page/"
          role="link"
          target="_self"
        >
          Sub Content
        </a>
      </span>
    </div>
  </div>
</span>
`;

exports[`<Link> touch events exist does not open <LinkList> on mouse enter 1`] = `
.c1 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  width: 205px;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12);
}

.list-container--open .c1 {
  display: block;
}

.c1.links__list--open {
  display: block;
}

.c2 {
  padding: 8px;
}

.c2.wrapper--has-after {
  padding: 8px 8px 0 8px;
}

.c0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
  position: relative;
}

.links__list .c0 {
  width: 100%;
  text-align: left;
}

.c0:focus,
.c0:hover {
  outline: 0;
}

.c0.link--has-other.link--open:after {
  content: "";
  display: inline-block;
  border-bottom: 4px solid #026cdf;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

<span
  class="list-container list-container--closed"
  role="none"
>
  <a
    aria-expanded="false"
    aria-haspopup="true"
    class="c0 link link--has-other"
    href="/"
    role="link"
    target="_self"
  >
    Content
  </a>
   
  <div
    class="c1 links links__list"
  >
    <div
      class="c2"
    >
      <span
        class="list-container list-container--closed"
        role="none"
      >
        <a
          class="c0 link"
          href="/page/"
          role="link"
          target="_self"
        >
          Sub Content
        </a>
      </span>
    </div>
  </div>
</span>
`;
